--- a/Contacts/how-to-input-multiple-emails.mdx
+++ b/Contacts/how-to-input-multiple-emails.mdx
@@ -1,6 +1,6 @@
 ---
 title: "How to Input Multiple Emails for Contacts"
-description: "The "Multiple Emails for a Contact" feature allows users to add more than one email address to a contact's details"
+description: "The Multiple Emails for a Contact" feature allows users to add more than one email address to a contact's details"
 publishedAt: "2023-01-01"
 updatedAt: "2023-01-01"
 isPublished: true
