--- a/Contacts/how-to-input-multiple-emails.mdx
+++ b/Contacts/how-to-input-multiple-emails.mdx
@@ -7,5 +7,5 @@ isPublished: true
 tags: ['contacts']
 ---
 
-The Multiple Emails for a Contact" feature allows users to add more than one email address to a contact's details: one primary Email Address and Ten Additional Email addresses. Users can add, manage, and edit multiple email addresses for a contact and choose a primary email that will be used for all actions and interactions with the contact. Additionally, the feature will support conversation for additional emails, bulk import, and emails in the near future.
+The Multiple Emails for a Contact feature allows users to add more than one email address to a contact's details: one primary Email Address and Ten Additional Email addresses. Users can add, manage, and edit multiple email addresses for a contact and choose a primary email that will be used for all actions and interactions with the contact. Additionally, the feature will support conversation for additional emails, bulk import, and emails in the near future.
 
