--- a/Calendar/appointment-timeslots-that-are-not-showing-up.mdx
+++ b/Calendar/appointment-timeslots-that-are-not-showing-up.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Appointment timeslots that should showing but they are not should not showing but they should be "
+title: "Appointment timeslots that are not showing up"
 description: "Appointment timeslots may not display when they should or appear when they shouldn't."
 ---
 
